# rust-learning

./: readme.md
cli-ser/: Cargo.toml
cli-ser/src/: lib.rs
client-server/: readme.md
client-server/cli-ser/: Cargo.toml
client-server/cli-ser/src/: lib.rs
client-server/client/: Cargo.toml
client-server/client/src/: lib.rs  main.rs
client-server/client/tests/: test_run.rs
client-server/server/: Cargo.toml
client-server/server/src/: db.rs  lib.rs  main.rs
client-server/server/tests/: 2_clients_text_message.rs  5_clients_5_messages.rs  build_and_run.rs  connections.rs
first/src/: main.rs
hw02/: Cargo.toml
hw02/src/: main.rs
text-tool/: Cargo.toml  example.csv  example.txt
text-tool/src/: lib.rs  main.rs
