[package]
name = "cli-ser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.31"
image = "0.24.7"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
