[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
cli-ser = { git = "https://github.com/reasonablecow/rust-learning.git", branch = "hw-lesson-15" }
futures = "0.3.29"
regex = "1.10.2"
tokio = { version = "1.35.0", features = ["full"] }
