[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
cli-ser = { path = "../cli-ser" }
dashmap = "5.5.3"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
thiserror = "1.0.52"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
